--- a/assets/css/modules/_profile.scss
+++ b/assets/css/modules/_profile.scss
@@ -199,6 +199,10 @@
       margin-right: 1rem !important;
     }
   }
+  .input-form button.button-footer {
+    width: auto;
+    padding: 0.9375rem 1.25rem;
+  }
 }
 
 .delete-image {
