--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -277,6 +277,9 @@ h3 {
 .padding10 {
   padding: 0.625rem; }
 
+.padding0 {
+  padding: 0 !important; }
+
 .padding0-10 {
   padding: 0 0.625rem; }
 
@@ -509,7 +512,10 @@ h3 {
   height: 7.25rem; }
 
 .width90px {
-  width: 5.625rem; }
+  width: 5.625rem !important; }
+
+.width86px {
+  width: 86px !important; }
 
 .width64px {
   width: 4rem; }
@@ -521,13 +527,13 @@ h3 {
   width: 10%; }
 
 .width20per {
-  width: 20%; }
+  width: 20% !important; }
 
 .width21per {
   width: 21%; }
 
 .width30per {
-  width: 30%; }
+  width: 30% !important; }
 
 .width29per {
   width: 29%; }
@@ -2450,5 +2456,8 @@ footer {
 
 .post-inner .gj-datepicker-md {
   width: 100%; }
+
+.delete-image.positionInherit {
+  position: inherit; }
 
 /*# sourceMappingURL=site.css.map */
